visual: keep Visual V1 gate Android-compatible